--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -670,7 +670,7 @@ footer .container {
     }
 
     .work-list-img a >img {
-        height: 200px;
+        /* height: 200px; */
         width:100%;
     }
     
