--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -14,6 +14,7 @@ Font family
 }
 .fz-jp{
     font-family: 'Noto Sans JP', sans-serif;
+    font-weight: 700;
 }
 .fz-jp-m {
     font-family: "noto-sans-cjk-jp", sans-serif;
