--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -746,6 +746,9 @@ footer .container {
 
 @media screen and (max-width:530px) {
 
+    /* .slider-sec>.container {
+        padding: 0;
+    } */
     /* slider */
     .slider-sec .center .slider-img {
         max-width: 400px;
@@ -799,6 +802,9 @@ footer .container {
 }
 
 @media screen and (max-width:430px) {
+    .slider-sec>.container {
+        padding: 0;
+    }
     /* service */
     .service-container {
         padding: 0 5px;
@@ -806,7 +812,7 @@ footer .container {
 
     /* slider */
     .slider-sec .center .slider-img {
-        max-width: 270px;
+        max-width: 280px;
     }
 
     /* footer section */
