--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ html {
 .work-list ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 40px;
 }
 
