--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -28,11 +28,33 @@
         opacity: 1;
     }
 }
+
+/* 左から */
+
+.fadeLeft{
+    animation-name:fadeLeftAnime;
+    animation-duration: 1s;
+    animation-fill-mode:forwards;
+    opacity:0;
+    }
+    
+    @keyframes fadeLeftAnime{
+      from {
+        opacity: 0;
+      transform: translateX(-50px);
+      }
+    
+      to {
+        opacity: 1;
+      transform: translateX(0);
+      }
+    }
+
 /* fadeUp */
 
 .fadeUp {
     animation-name: fadeUpAnime;
-    animation-duration: 1s;
+    animation-duration: 0.5s;
     opacity: 0;
 
     animation-fill-mode: forwards;
@@ -151,6 +173,7 @@
 .fadeInTrigger,
 .fadeUpTrigger,
 .fadeDownTrigger,
+.fadeLeftTrigger,
 .blurTrigger {
     opacity: 0;
 }
